--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "file-saver": "^2.0.5",
+    "i18next": "^23.16.2",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.1.0",
     "react-redux": "^9.1.2",
     "xlsx": "^0.18.5"
   },
