--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-i18next": "^15.1.0",
     "react-redux": "^9.1.2",
+    "recharts": "^2.13.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
