--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.7",
+    "@types/fpathile-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
