--- a/package.json
+++ b/package.json
@@ -10,22 +10,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@vercel/analytics": "^1.4.0",
     "file-saver": "^2.0.5",
     "i18next": "^23.16.2",
     "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^2.6.2",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-i18next": "^15.1.0",
-    "react-number-format": "^5.4.2",
-    "react-paginate": "^8.2.0",
+    "next": "13.0.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-i18next": "^11.0.0",
     "react-redux": "^9.1.2",
     "recharts": "^2.13.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/fpathile-saver": "^2.0.7",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
